--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
             </picture>
           </div>
           <div class="inner--about__contentSide">
-            <span class="block text-center">Our Benefit</span>
-            <h3 class="text-center">
+            <span class="title-top block text-center">Our Benefit</span>
+            <h3 class="section-title text-center">
               The More Healthy <br />
               Food The Better
             </h3>
@@ -204,8 +204,8 @@
           class="inner--stats flex justify-between gap-40 items-center flex-wrap text-center"
         >
           <div class="inner--stats__contentSide">
-            <span class="block">Our Stars</span>
-            <h3 class="text-center">
+            <span class="title-top block">Our Stars</span>
+            <h3 class="section-title text-center">
               Veggie Food Goes <br />
               On And Always On
             </h3>
@@ -246,7 +246,7 @@
       <div class="container">
         <div class="inner--category">
           <span class="block text-center">Our Features</span>
-          <h3 class="text-center">Variety Of Foods</h3>
+          <h3 class="section-title text-center">Variety Of Foods</h3>
 
           <div
             class="inner--category__container flex text-center justify-center"
@@ -329,8 +329,8 @@
     <!-- popular products area-->
     <section class="popular--products--section text-center">
       <div class="container">
-        <span class="block">Our Product</span>
-        <h3>Most Popular Product</h3>
+        <span class="title-top block">Our Product</span>
+        <h3 class="section-title text-center">Most Popular Product</h3>
         <div
           class="inner--products__container flex justify-between items-center flex-wrap gap-20"
         >
@@ -490,13 +490,22 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
             <div class=" newsLetter__btn flex items-center flex-wrap">
               <input class="email--feld" type="email" placeholder="Email">
-            <input class="btn submit--btn" type="submit">
+            <input class="btn submit--btn inline-block" type="submit">
             </div>
           </div>
         </div>
+        <p class="footer--copey text-center block">Copyright © 2021 Foodies.</p>
       </div>
     </footer>
-<p class="text-center block">Copyright © 2021 Foodies.</p>
+
+
+
+
+
+
+
+
+
     <!-- /////////////////// JavaScript Code for responsive navbar -->
 
     <script>
